Update minor wording

--- a/xi-qiu-resume.tex
+++ b/xi-qiu-resume.tex
@@ -150,10 +150,10 @@
       {San Jose, CA}
       {Mar 2025 -- Present}
       \resumeItemListStart
-        \resumeItem{Designed and built a multi-agent AI system for Suspicious Actor Report (SAR) generation using Gemini, Next.js, and FastAPI. Improved agents' reasoning capability by 2.5x and raised report accuracy by 50\% through prompt engineering, evaluation, and workflow enhancements.}
+        \resumeItem{Designed and built a multi-agent AI system for Suspicious Actor Report (SAR) generation using Gemini, Next.js, and FastAPI. Improved agent reasoning capability by 2.5x and raised report accuracy by 50\% through prompt engineering, evaluation, and workflow enhancements.}
         \resumeItem{Built and optimized agentic workflows for entity extraction, data aggregation, and structured report generation. Developed a human-in-the-loop module that revises LLM-generated analyses based on investigator feedback.}
         \resumeItem{Evaluated and integrated vLLM and LMCache into production ML pipelines, reducing inference latency by 40\%.}
-        \resumeItem{Migrated 10+ production ML pipelines to modern, high-performance platforms using GenAI-assisted automation, significantly reducing manual migration effort.}
+        \resumeItem{Migrated 10+ production ML pipelines to modern, high-performance platforms using GenAI-assisted automation, reducing manual migration effort by 50\%.}
         \resumeItem{Ran knowledge-sharing sessions on frontier AI research and GenAI fundamentals, including paper reviews and LLM architecture deep dives.}
       \resumeItemListEnd
 
@@ -194,8 +194,8 @@
     \resumeProjectHeading
       {Transformer Interpretability Research} {PyTorch, TransformerLens, CircuitVis} {https://github.com/robnanarivo/ARENA_3.0/tree/main/chapter1_transformer_interp/exercises}
       \resumeItemListStart
-        \resumeItem{Recreated the GPT-2 model architecture from scratch based on the original paper. Trained on the \texttt{TinyStories} dataset and experimented with various sampling methods including Temperature, Top-k, and Top-p sampling.}
-        \resumeItem{Detected induction heads with attention pattern visualizations and ablation in GPT2-small. Reverse-engineered QK-, OV-, and K-composition circuits using factorized matrices of query, key, and value weights of the transformer heads.}
+        \resumeItem{Recreated the GPT-2 model architecture from scratch based on the original paper. Trained on \texttt{TinyStories} dataset and experimented with various sampling methods including Temperature, Top-k, and Top-p sampling.}
+        \resumeItem{Detected induction heads with attention pattern visualization and ablation in GPT2-small. Reverse-engineered QK-, OV-, and K-composition circuits using factorized matrices of query, key, and value weights of the transformer heads.}
       \resumeItemListEnd
 
     \resumeProjectHeading
@@ -209,7 +209,7 @@
     \resumeProjectHeading
       {RLHF for GPT-2} {PyTorch, Gymnasium, TransformerLens} {https://github.com/robnanarivo/ARENA_3.0/tree/main/chapter2_rl/exercises}
       \resumeItemListStart
-        \resumeItem{Built the foundational reinforcement learning skillset required for RLHF by implementing and training classic algorithms (Q-learning, SARSA, DQN, and PPO) from scratch using Gymnasium environments.}
+        \resumeItem{Built the foundational reinforcement learning skillset required for RLHF by implementing and training classic algorithms (Q-learning, SARSA, DQN, and PPO) from scratch on Gymnasium environments.}
         \resumeItem{Implemented end-to-end PPO and GRPO algorithms for training GPT-2 with RLHF, including value head modeling, rollout collection, advantage estimation, and KL-regularization.}
         \resumeItem{Fine-tuned GPT-2 with both full-parameter training and LoRA. Experimented with rule-based and sentiment-based reward functions to analyze how distinct reward signals steer model behavior.}
       \resumeItemListEnd
@@ -217,14 +217,14 @@
     \resumeProjectHeading
       {RAG App for Climbing Trip Planning} {Python, LangChain, Vector DB, Scrapy} {https://github.com/robnanarivo/mountain-project-scraper}
       \resumeItemListStart
-        \resumeItem{Developed a retrieval augmented generation recommendation system for rock climbing trip planning. Used LangChain for prototyping and optimized performance with prompt engineering and fine-tuning.}
+        \resumeItem{Developed a retrieval-augmented generation (RAG) recommendation system for rock climbing trip planning. Used LangChain for prototyping and optimized performance with prompt engineering and fine-tuning.}
         \resumeItem{Created a web scraper with Scrapy and stored the data in a vector DB for retrieval.}
       \resumeItemListEnd
 
     \resumeProjectHeading
       {Distributed Cloud Platform} {C++, Unix} {https://github.com/robnanarivo/miniCloud}
       \resumeItemListStart
-        \resumeItem{Created a distributed cloud platform that offers email and file storage services in a team of 4. The platform supports multiple frontend and backend servers, and features data replication, fault tolerance, and data recovery.}
+        \resumeItem{Created a distributed cloud platform that offers email and file storage services in a team of 4. The platform features multi-node, load-balanced frontend and backend services with data replication, fault tolerance, and recovery.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
