Update tech in first bullet point

--- a/xi-qiu-resume.tex
+++ b/xi-qiu-resume.tex
@@ -150,7 +150,7 @@
       {San Jose, CA}
       {Jan 2025 -- Present}
       \resumeItemListStart
-        \resumeItem{Designed and built a multi-agent AI system for Suspicious Actor Report (SAR) generation using Gemini, Next.js, and FastAPI. Improved agent reasoning capability by 2.5x and raised report accuracy by 50\% through prompt engineering, evaluation, and workflow enhancements.}
+        \resumeItem{Designed and built a multi-agent AI system for Suspicious Actor Report (SAR) generation using Python, Gemini, Next.js, and FastAPI. Improved agent reasoning capability by 2.5x and raised report accuracy by 50\% through prompt engineering, evaluation, and workflow enhancements.}
         \resumeItem{Built and optimized agentic workflows for entity extraction, data aggregation, and structured report generation. Developed a human-in-the-loop module that revises LLM-generated analyses based on investigator feedback.}
         \resumeItem{Evaluated and integrated vLLM and LMCache into production ML pipelines, reducing inference latency by 40\%.}
         \resumeItem{Migrated 10+ production ML pipelines to modern, high-performance platforms using GenAI-assisted automation, reducing manual migration effort by 50\%.}
