--- a/xi-qiu-resume.tex
+++ b/xi-qiu-resume.tex
@@ -135,7 +135,7 @@
 \begin{center}
     {\Huge \scshape \color{emph} Xi (Robby) Qiu} \\ \vspace{5pt}
     San Jose, California \\ \vspace{1pt}
-    \small \raisebox{-0.1\height}\faPhone\ 610-604-2243 ~ \href{mailto:robbyqiu@outlook.com}{\raisebox{-0.2\height}\faEnvelope\  \underline{robbyqiu@outlook.com}} ~ 
+    \small \raisebox{-0.1\height}\faPhone\ 610-604-2243 ~ \href{mailto:xi.qiu.careers@outlook.com}{\raisebox{-0.2\height}\faEnvelope\  \underline{xi.qiu.careers@outlook.com}} ~ 
     \href{https://linkedin.com/in/rob-rr}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/rob-rr}}  ~
     \href{https://github.com/robnanarivo}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/robnanarivo}}
 \end{center}
